--- a/CN_download_training_data.ipynb
+++ b/CN_download_training_data.ipynb
@@ -95,7 +95,7 @@
     "        inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': sat_list,\n",
     "                  'sitename': sitename, 'filepath': training_dir_path, 'include_T2': False}\n",
     "\n",
-    "        metadata = SDS_download.retrieve_images(inputs)\n",
+    "        metadata = SDS_download.retrieve_trainging_images(inputs)\n",
     "\n",
     "print('***********************************************************')\n",
     "print(f'finished ...')\n",
