--- a/CN_download_training_data.ipynb
+++ b/CN_download_training_data.ipynb
@@ -23,31 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key savefig.frameon in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key verbose.level in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key verbose.fileo in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -85,30 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***********************************************************\n",
-      "processing roi: ArgyleAirport\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'coastsat.SDS_download' has no attribute 'retrieve_trainging_images'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-80dbdccb8f60>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m                   'sitename': sitename, 'filepath': training_dir_path, 'include_T2': False}\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m         \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSDS_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mretrieve_trainging_images\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'***********************************************************'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'coastsat.SDS_download' has no attribute 'retrieve_trainging_images'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "roi_sites = os.listdir(sites_dir_path)\n",
     "\n",
@@ -125,20 +82,22 @@
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "\n",
     "        \n",
-    "    all_dates = [['2020-01-01', '2020-12-31']]\n",
-    "        \n",
-    "    all_sats = [['S2']]\n",
+    "    all_dates = [['2020-01-01', '2020-01-31'],['2020-02-01', '2020-02-28'],['2020-03-01', '2020-03-31'],\n",
+    "                 ['2020-04-01', '2020-04-30'],['2020-05-01', '2020-05-31'],['2020-06-01', '2020-06-30'],\n",
+    "                 ['2020-07-01', '2020-07-31'],['2020-08-01', '2020-08-31'],['2020-09-01', '2020-09-30'],\n",
+    "                 ['2020-10-01', '2020-10-31'],['2020-11-01', '2020-11-30'],['2020-12-01', '2020-12-31']]\n",
     "\n",
-    "    for date_index, dates in enumerate(all_dates):\n",
+    "    all_dates = [['2020-01-01', '2020-12-31']]\n",
+    "                  \n",
+    "    for date_pair in all_dates:\n",
     "        \n",
-    "        dates = all_dates[date_index]     # date range\n",
-    "        sat_list = all_sats[date_index]   # satellite missions\n",
+    "        print(f'    from {date_pair[0]} to {date_pair[1]}')\n",
     "        \n",
     "        # put all the inputs into a dictionnary\n",
-    "        inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': sat_list,\n",
+    "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_list': ['S2'],\n",
     "                  'sitename': sitename, 'filepath': training_dir_path, 'include_T2': False}\n",
     "\n",
-    "        metadata = SDS_download.retrieve_trainging_images(inputs)\n",
+    "        metadata = SDS_download.retrieve_training_images(inputs)\n",
     "\n",
     "print('***********************************************************')\n",
     "print(f'finished ...')\n",
