--- a/CN_download_training_data.ipynb
+++ b/CN_download_training_data.ipynb
@@ -33,32 +33,25 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
+    "import xmlformatter\n",
     "from coastsat import SDS_download, SDS_preprocess, SDS_shoreline, SDS_tools, SDS_transects\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
     "country = 'STV'\n",
-    "base_filepath = os.path.join(dataPartition, country)  \n",
-    "sites_dir_path = os.path.join(os.path.join(base_filepath, 'sites'))\n",
-    "training_dir_path = os.path.join(os.path.join(base_filepath, 'classification', 'training_data'))"
+    "base_filepath = os.path.join(dataPartition, country, 'classification')  \n",
+    "sites_dir_path = os.path.join(os.path.join(base_filepath, 'training_sites'))\n",
+    "training_dir_path = os.path.join(os.path.join(base_filepath, 'data'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Retrieval of the images from GEE\n",
+    "### 1. Download images\n",
+    "For each site on which you want to train the classifier, save a .kml file with the region of interest (5 vertices clockwise, first and last points are the same, can be created from Google myMaps) in the folder \\training_sites.\n",
     "\n",
-    "To retrieve from the GEE server the available satellite images cropped around the user-defined region of coastline for the particular time period of interest, the following variables are required:\n",
-    "\n",
-    "* Coordinate list: a list of the coordinates of the region of interest (longitude/latitude pairs in WGS84) – see section 'create coordinate list in User handbook to extract ROI from study site\n",
-    "* all_dates: dates over which the images will be retrieved (e.g., dates = ['2017-12-01', '2018-01-01'])\n",
-    "* all_sats: satellite missions to consider (e.g., sat_list = ['L7', 'L8', 'S2'] for Landsat 7, 8 and Sentinel-2 collections)\n",
-    "* sitename: name of the site (this is the name of the subfolder where the images and other accompanying files will be stored)\n",
-    "\n",
-    "Similar to coastsat, there are some extra parameters such as those to go through manual checking, whether to combine Landsat collections and cloud thresholds.\n",
-    "\n",
-    "Make sure the area of your ROI is smaller than 100 km2 (if larger split it into smaller ROIs) - GEE limits download size"
+    "You only need a few images (~10) to train the classifier."
    ]
   },
   {
