--- a/example_jupyter.ipynb
+++ b/example_jupyter.ipynb
@@ -25,9 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key savefig.frameon in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.level in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.fileo in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -41,7 +63,8 @@
     "plt.ion()\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from coastsat import SDS_download, SDS_preprocess, SDS_shoreline, SDS_tools, SDS_transects"
+    "from coastsat import SDS_download, SDS_preprocess, SDS_shoreline, SDS_tools, SDS_transects,\\\n",
+    "    NOC_download"
    ]
   },
   {
@@ -59,17 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images available between 2017-12-01 and 2018-01-01:\n",
-      "- In Landsat Tier 1 & Sentinel-2 Level-1C:\n",
-      "  S2: 7 images\n",
-      "  Total: 7 images\n"
+      "finished ...\n"
      ]
     }
    ],
@@ -80,21 +100,55 @@
     "            [151.312234, -33.7390216],\n",
     "            [151.311204, -33.701399],\n",
     "            [151.2957545, -33.7012561]]] \n",
+    "\n",
+    "\n",
+    "# Watamu\n",
+    "polygon = [[[39.96900645056771, -3.394965342022075],\n",
+    "            [40.01613081365059, -3.394965342022075],\n",
+    "            [40.01613081365059, -3.355304668549219],\n",
+    "            [39.96900645056771, -3.355304668549219],\n",
+    "            [39.96900645056771, -3.394965342022075]]]\n",
+    "\n",
+    "# SaltWhistleBay\n",
+    "polygon = [[[-61.4023629664403, 12.62738856518761],\n",
+    "            [-61.37805468401568, 12.62738856518761],\n",
+    "            [-61.37805468401568, 12.65331041445191],\n",
+    "            [-61.4023629664403, 12.65331041445191],\n",
+    "            [-61.4023629664403, 12.62738856518761]]]\n",
+    "\n",
+    "#ArgyleAirport\n",
+    "polygon = [[[-61.16538111044126, 13.13599350895184],\n",
+    "            [-61.13455970701521, 13.13599350895184],\n",
+    "            [-61.13455970701521, 13.19092830161617],\n",
+    "            [-61.16538111044126, 13.19092830161617],\n",
+    "            [-61.16538111044126, 13.13599350895184]]]\n",
+    "\n",
     "# it's recommended to convert the polygon to the smallest rectangle (sides parallel to coordinate axes)       \n",
     "polygon = SDS_tools.smallest_rectangle(polygon)\n",
     "# date range\n",
-    "dates = ['2017-12-01', '2018-01-01']\n",
+    "dates = ['2020-01-01', '2020-12-31']\n",
     "# satellite missions\n",
     "sat_list = ['S2']\n",
     "# name of the site\n",
     "sitename = 'NARRA'\n",
+    "sitename = 'SaltWhistleBay'\n",
+    "sitename = 'ArgyleAirport'\n",
+    "#sitename = 'Watamu'\n",
+    "dataPartition = 'c:\\\\data\\\\coastsat'\n",
+    "country = 'STV'\n",
+    "#country = 'kenya'\n",
+    "base_filepath = os.path.join(dataPartition, country)  \n",
+    "\n",
     "# directory where the data will be stored\n",
-    "filepath = os.path.join(os.getcwd(), 'data')\n",
+    "filepath = os.path.join(base_filepath, 'data')\n",
     "# put all the inputs into a dictionnary\n",
-    "inputs = {'polygon': polygon, 'dates': dates, 'sat_list': sat_list, 'sitename': sitename, 'filepath':filepath}\n",
+    "inputs = {'polygon': polygon, 'dates': dates, 'sat_list': sat_list,\n",
+    "          'sitename': sitename, 'filepath':base_filepath}\n",
     "\n",
     "# before downloading the images, check how many images are available for your inputs\n",
-    "SDS_download.check_images_available(inputs);"
+    "#SDS_download.check_images_available(inputs)\n",
+    "\n",
+    "print('finished ...')"
    ]
   },
   {
@@ -110,12 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'settings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-60f031e3d24a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# inputs['include_T2'] = True\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mretrieve_median_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'finished ...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'settings' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# inputs['include_T2'] = True\n",
-    "metadata = SDS_download.retrieve_images(inputs)"
+    "metadata = NOC_download.retrieve_median_image(settings)\n",
+    "\n",
+    "print('finished ...')"
    ]
   },
   {
@@ -127,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +227,10 @@
     "    # general parameters:\n",
     "    'cloud_thresh': 0.5,        # threshold on maximum cloud cover\n",
     "    'output_epsg': 3857,        # epsg code of spatial reference system desired for the output   \n",
+    "    'output_epsg': 3857,        # epsg code of spatial reference system desired for the output  \n",
     "    # quality control:\n",
     "    'check_detection': True,    # if True, shows each shoreline detection to the user for validation\n",
-    "    'adjust_detection': False,  # if True, allows user to adjust the postion of each shoreline by changing the threhold\n",
+    "    'adjust_detection': True,  # if True, allows user to adjust the postion of each shoreline by changing the threhold\n",
     "    'save_figure': True,        # if True, saves a figure showing the mapped shoreline for each image\n",
     "    # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
     "    'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
@@ -170,8 +239,16 @@
     "    'cloud_mask_issue': False,  # switch this parameter to True if sand pixels are masked (in black) on many images  \n",
     "    'sand_color': 'default',    # 'default', 'dark' (for grey/black sand beaches) or 'bright' (for white sand beaches)\n",
     "    # add the inputs defined previously\n",
-    "    'inputs': inputs\n",
-    "}"
+    "    'inputs': inputs,\n",
+    "    \n",
+    "    # required by NOC for Sentinel2\n",
+    "    'CLOUD_FILTER': 50,          # [Integer] Maximum image cloud cover percent allowed in image collection'\n",
+    "    'CLD_PRB_THRESH': 25,        # {Integer] Cloud probability (%); values greater than are considered cloud\n",
+    "    'NIR_DRK_THRESH': 0.08,      # [Float] Near-infrared reflectance; values less than are considered potential cloud shadow\n",
+    "    'CLD_PRJ_DIST': 2,           # [Float] Maximum distance (km) to search for cloud shadows from cloud edges |\n",
+    "    'BUFFER': 50,               # [Integer] Distance (m) to dilate the edge of cloud-identified objects |\n",
+    "\n",
+    "    }"
    ]
   },
   {
@@ -184,9 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Satellite images saved as .jpg in c:\\data\\coastsat\\STV\\ArgyleAirport\\jpg_files\\preprocessed\n"
+     ]
+    }
+   ],
    "source": [
     "SDS_preprocess.save_jpg(metadata, settings)"
    ]
@@ -201,9 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference shoreline already exists and was loaded\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
@@ -228,8 +321,48 @@
    },
    "outputs": [],
    "source": [
+    "#%matplotlib qt\n",
+    "output = SDS_shoreline.extract_shorelines(metadata, settings)\n",
+    "\n",
+    "print('finished ...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping shorelines:\n",
+      "S2:   100%\n",
+      "\n",
+      "\n",
+      "[False False False False False False False False False False]\n",
+      "[False False  True  True False False False False False False]\n",
+      "[ True  True False False False False False False False False]\n",
+      "[ True  True  True  True False False False False False False]\n",
+      "\n",
+      "15171\n",
+      "119975\n",
+      "76488\n",
+      "\n",
+      "15171\n",
+      "7696\n",
+      "9154\n",
+      "\n",
+      "finished ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from coastsat import NOC_shoreline\n",
     "%matplotlib qt\n",
-    "output = SDS_shoreline.extract_shorelines(metadata, settings)"
+    "output = NOC_shoreline.extract_shorelines(metadata, settings)\n",
+    "\n",
+    "print('finished ...')"
    ]
   },
   {
@@ -241,9 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 duplicates\n",
+      "0 bad georef\n"
+     ]
+    }
+   ],
    "source": [
     "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
     "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
@@ -258,16 +400,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "geomtype = 'lines' # choose 'points' or 'lines' for the layer geometry\n",
     "gdf = SDS_tools.output_to_gdf(output, geomtype)\n",
     "gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
     "# save GEOJSON layer to file\n",
     "gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'], '%s_output_%s.geojson'%(sitename,geomtype)),\n",
-    "                                driver='GeoJSON', encoding='utf-8')"
+    "                                driver='GeoJSON', encoding='utf-8')\n",
+    "\n",
+    "print('finished ...')"
    ]
   },
   {
@@ -279,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
