--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -37,7 +37,7 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={'cloud_thresh':0.9,\n",
-    "           'output_epsg': 3857,\n",
+    "           'output_epsg': 4326,\n",
     "           \n",
     "            # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
     "            'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
@@ -151,6 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
     "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline"
    ]
@@ -194,6 +195,31 @@
     "\n",
     "print('finished ...')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=[15,8])\n",
+    "plt.axis('equal')\n",
+    "plt.xlabel('Eastings')\n",
+    "plt.ylabel('Northings')\n",
+    "plt.grid(linestyle=':', color='0.5')\n",
+    "for i in range(len(output['shorelines'])):\n",
+    "    sl = output['shorelines'][i]\n",
+    "    date = output['dates'][i]\n",
+    "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
