--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -23,9 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key savefig.frameon in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.level in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.fileo in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -37,7 +59,7 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={'cloud_thresh':0.9,\n",
-    "           'output_epsg': 4326,\n",
+    "           'output_epsg': 3857,\n",
     "           \n",
     "            # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
     "            'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
@@ -78,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: ArgyleAirport\n"
+     ]
+    }
+   ],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -113,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "    ## download median images\n",
     "#    metadata = NOC_download.retrieve_median_image(settings)\n",
@@ -126,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'S2': {'filenames': ['2020-01-01-00-00-00_S2_ArgyleAirport_median_10m.tif'], 'acc_georef': [1.0], 'epsg': [4326], 'dates': [datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)]}}\n"
+     ]
+    }
+   ],
    "source": [
     "    ## load saved metadata\n",
     "    metadata = SDS_download.get_metadata(settings['inputs'])\n",
@@ -138,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference shoreline already exists and was loaded\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
@@ -158,9 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping shorelines:\n",
+      "S2:   100%\n",
+      "\n",
+      "\n",
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
@@ -172,9 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 duplicates\n",
+      "0 bad georef\n"
+     ]
+    }
+   ],
    "source": [
     "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
     "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
@@ -182,18 +257,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no shorelines to be seen ...\n"
+     ]
+    }
+   ],
    "source": [
-    "geomtype = 'lines' # choose 'points' or 'lines' for the layer geometry\n",
-    "gdf = SDS_tools.output_to_gdf(output, geomtype)\n",
-    "gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "# save GEOJSON layer to file\n",
-    "gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'], '%s_output_%s.geojson'%(sitename,geomtype)),\n",
-    "                                driver='GeoJSON', encoding='utf-8')\n",
+    "gdf = NOC_tools.output_to_gdf(output)\n",
     "\n",
-    "print('finished ...')"
+    "if  gdf:\n",
+    "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
+    "    # save GEOJSON layer to file\n",
+    "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'], '%s_output_%s.geojson'%(sitename,geomtype)),\n",
+    "                                    driver='GeoJSON', encoding='utf-8')\n",
+    "    print('finished ...')\n",
+    "else:\n",
+    "    print('no shorelines to be seen ...')"
    ]
   },
   {
