--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -231,6 +231,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "metadata_s1 = NOC_download.retrieve_median_sar(inputs)\n",
+    "\n",
+    "print(metadata_s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
