SAR first implementation

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -23,9 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key savefig.frameon in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.level in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.fileo in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -36,22 +58,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'cloud_thresh':0.9,\n",
-    "           'output_epsg': 32620,\n",
-    "           \n",
-    "            # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
-    "            'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
-    "            'buffer_size': 150,         # radius (in metres) for buffer around sandy pixels considered in the shoreline detection\n",
-    "            'min_length_sl': 200,       # minimum length (in metres) of shoreline perimeter to be valid\n",
-    "            'cloud_mask_issue': False,  # switch this parameter to True if sand pixels are masked (in black) on many images  \n",
-    "    \n",
-    "            # Sentinel\n",
-    "            'CLOUD_FILTER': 50,         # [Integer] Maximum image cloud cover percent allowed in image collection'\n",
-    "            'CLD_PRB_THRESH': 25,       # {Integer] Cloud probability (%); values greater than are considered cloud\n",
-    "            'NIR_DRK_THRESH': 0.08,     # [Float] Near-infrared reflectance; values less than are considered potential cloud shadow\n",
-    "            'CLD_PRJ_DIST': 2,          # [Float] Maximum distance (km) to search for cloud shadows from cloud edges |\n",
-    "            'BUFFER': 50,               # [Integer] Distance (m) to dilate the edge of cloud-identified objects |\n",
-    "\n",
+    "settings ={'output_epsg': 32620,\n",
     "            'reference_shoreline': True,\n",
     "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
     "          \n",
@@ -59,28 +66,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Retrieval of the images from GEE\n",
-    "\n",
-    "To retrieve from the GEE server the available satellite images cropped around the user-defined region of coastline for the particular time period of interest, the following variables are required:\n",
-    "\n",
-    "* Coordinate list: a list of the coordinates of the region of interest (longitude/latitude pairs in WGS84) – see section 'create coordinate list in User handbook to extract ROI from study site\n",
-    "* all_dates: dates over which the images will be retrieved (e.g., dates = ['2017-12-01', '2018-01-01'])\n",
-    "* all_sats: satellite missions to consider (e.g., sat_list = ['L7', 'L8', 'S2'] for Landsat 7, 8 and Sentinel-2 collections)\n",
-    "* sitename: name of the site (this is the name of the subfolder where the images and other accompanying files will be stored)\n",
-    "\n",
-    "Similar to coastsat, there are some extra parameters such as those to go through manual checking, whether to combine Landsat collections and cloud thresholds.\n",
-    "\n",
-    "Make sure the area of your ROI is smaller than 100 km2 (if larger split it into smaller ROIs) - GEE limits download size"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: SaltWhistleBay\n"
+     ]
+    }
+   ],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -104,7 +101,7 @@
     "    sitename = site[:site.find('.')]\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'sitename': sitename, 'filepath': base_filepath}\n",
+    "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
@@ -113,44 +110,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'S1': {'filenames': ['2020-01-01-00-00-00_S1_SaltWhistleBay_median.tif'], 'acc_georef': [1.0], 'epsg': [4326], 'dates': [datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)]}}\n",
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
-    "if sat_name == 'S1':\n",
-    "    metadata_s1 = NOC_download.retrieve_median_sar(inputs)\n",
-    "\n",
-    "    print(metadata_s1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    ## download median images\n",
-    "    metadata = NOC_download.retrieve_median_image(settings)\n",
-    "    metadata = SDS_download.get_metadata(inputs)\n",
+    "    #   metadata = NOC_download.retrieve_median_sar(inputs)\n",
+    "    ## load saved metadata\n",
+    "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
     "    \n",
+    "    print(metadata)\n",
     "    print('finished ...')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
-    "    \n",
-    "    print(metadata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference shoreline already exists and was loaded\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
@@ -170,14 +161,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping shorelines:\n",
+      "\r",
+      "S1:   100%\n",
+      "\n",
+      "@@@ 2020-01-01-00-00-00_S1_SaltWhistleBay_median.tif\n",
+      "c:\\data\\coastsat\\STV\\SaltWhistleBay\\S1 2020-01-01-00-00-00_S1_SaltWhistleBay_median.tif S1\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
     "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_shorelines(metadata, settings)\n",
+    "    output = NOC_shoreline.extract_sar_shorelines(metadata, settings)\n",
     "    \n",
     "    print('finished ...')"
    ]
