--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -23,9 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key savefig.frameon in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.level in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.fileo in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -78,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: SaltWhistleBay\n"
+     ]
+    }
+   ],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -113,22 +143,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "    ## download median images\n",
-    "    metadata = NOC_download.retrieve_median_image(settings)\n",
-    "    metadata = SDS_download.get_metadata(inputs)\n",
+    " #   metadata = NOC_download.retrieve_median_image(settings)\n",
+    " #   metadata = SDS_download.get_metadata(inputs)\n",
     "    \n",
     "    print('finished ...')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'S2': {'filenames': ['2020-01-01-00-00-00_S2_SaltWhistleBay_median_10m.tif'], 'acc_georef': [1.0], 'epsg': [4326], 'dates': [datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)], 'median_no': [103]}}\n"
+     ]
+    }
+   ],
    "source": [
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
@@ -138,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,20 +193,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference shoreline has been saved in c:\\data\\coastsat\\STV\\SaltWhistleBay\n",
+      "lenght: 171\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
-    "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline"
+    "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline\n",
+    "\n",
+    "print(f'lenght: {len(settings[\"reference_shoreline\"])}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapping shorelines:\n",
+      "S2:   100%\n",
+      "\n",
+      "@@@  (290, 271): 17213\n",
+      "\n",
+      "\n",
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
@@ -172,9 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 duplicates\n",
+      "0 bad georef\n"
+     ]
+    }
+   ],
    "source": [
     "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
     "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
@@ -182,18 +262,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['dates', 'shorelines', 'filename', 'cloud_cover', 'geoaccuracy', 'idx', 'median_no', 'satname'])\n",
+      "[datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(output.keys())"
+    "print(output.keys())\n",
+    "print(output['dates'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
     "\n",
@@ -210,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,17 +322,6 @@
     "    date = output['dates'][i]\n",
     "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
     "plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata_s1 = NOC_download.retrieve_median_sar(inputs)\n",
-    "\n",
-    "print(metadata_s1)"
    ]
   },
   {
