--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -23,37 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key savefig.frameon in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key verbose.level in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n",
-      "\n",
-      "Bad key verbose.fileo in file C:\\Users\\cneil\\Anaconda3\\envs\\coastsat-1.1\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.3.2/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import pickle\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
@@ -100,17 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: SaltWhistleBay\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -143,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "    ## download median images\n",
     " #   metadata = NOC_download.retrieve_median_image(settings)\n",
@@ -164,17 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'S2': {'filenames': ['2020-01-01-00-00-00_S2_SaltWhistleBay_median_10m.tif'], 'acc_georef': [1.0], 'epsg': [4326], 'dates': [datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)], 'median_no': [103]}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
@@ -184,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,18 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reference shoreline has been saved in c:\\data\\coastsat\\STV\\SaltWhistleBay\n",
-      "lenght: 171\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
@@ -215,23 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mapping shorelines:\n",
-      "S2:   100%\n",
-      "\n",
-      "@@@  (290, 271): 17213\n",
-      "\n",
-      "\n",
-      "finished ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
@@ -243,18 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 duplicates\n",
-      "0 bad georef\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
     "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
@@ -262,18 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['dates', 'shorelines', 'filename', 'cloud_cover', 'geoaccuracy', 'idx', 'median_no', 'satname'])\n",
-      "[datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(output.keys())\n",
     "print(output['dates'])"
@@ -281,25 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
+    "\n",
+    "satname = output['satname'][0]\n",
+    "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
     "\n",
     "if  ~gdf.empty:\n",
     "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
     "    # save GEOJSON layer to file\n",
     "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
-    "                             '%s_output_%s.geojson'%(sitename,'lines')),\n",
+    "                             file_string),\n",
     "                             driver='GeoJSON', encoding='utf-8')\n",
     "    print('finished ...')\n",
     "else:\n",
@@ -308,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
