--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -39,7 +39,7 @@
     "settings ={'output_epsg': 32620,\n",
     "            'reference_shoreline': True,\n",
     "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
-    "          \n",
+    "            'min_length_sl': 200, \n",
     "          }"
    ]
   },
@@ -142,22 +142,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(output.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
+    "\n",
+    "satname = output['satname'][0]\n",
+    "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
     "\n",
     "if  ~gdf.empty:\n",
     "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
     "    # save GEOJSON layer to file\n",
     "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
-    "                             '%s_output_%s.geojson'%(sitename,'lines')),\n",
+    "                             file_string),\n",
     "                             driver='GeoJSON', encoding='utf-8')\n",
     "    print('finished ...')\n",
     "else:\n",
@@ -181,6 +175,13 @@
     "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
     "plt.legend();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
