--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -37,9 +37,9 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={'output_epsg': 32620,\n",
-    "            'reference_shoreline': True,\n",
-    "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
-    "            'min_length_sl': 200, \n",
+    "           'reference_shoreline': True,\n",
+    "           'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
+    "           'min_length_sl': 200,       # min length (in meters) for shorelines\n",
     "          }"
    ]
   },
@@ -133,7 +133,9 @@
    "outputs": [],
    "source": [
     "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
-    "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
+    "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)\n",
+    "\n",
+    "print(f'number of shorelines found: {len(output)}')"
    ]
   },
   {
@@ -173,7 +175,9 @@
     "    sl = output['shorelines'][i]\n",
     "    date = output['dates'][i]\n",
     "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
-    "plt.legend();"
+    "plt.legend()\n",
+    "\n",
+    "print('finished ...')"
    ]
   },
   {
