--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -31,6 +31,7 @@
     "import numpy as np\n",
     "import pickle\n",
     "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
@@ -152,9 +153,7 @@
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
-    "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline\n",
-    "\n",
-    "print(f'lenght: {len(settings[\"reference_shoreline\"])}')"
+    "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline"
    ]
   },
   {
