--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -71,7 +71,8 @@
     "    sitename = site[:site.find('.')]\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10}\n",
+    "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
+    "              'polarisation': 'VH'}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
@@ -147,7 +148,7 @@
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
     "\n",
     "satname = output['satname'][0]\n",
-    "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
+    "file_string = f'{sitename}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
     "\n",
     "if  ~gdf.empty:\n",
     "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
@@ -155,37 +156,10 @@
     "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
     "                             file_string),\n",
     "                             driver='GeoJSON', encoding='utf-8')\n",
-    "    print('finished ...')\n",
+    "    print(f'written: {file_string}')\n",
     "else:\n",
     "    print('no shorelines to be seen ...')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=[15,8])\n",
-    "plt.axis('equal')\n",
-    "plt.xlabel('Eastings')\n",
-    "plt.ylabel('Northings')\n",
-    "plt.grid(linestyle=':', color='0.5')\n",
-    "for i in range(len(output['shorelines'])):\n",
-    "    sl = output['shorelines'][i]\n",
-    "    date = output['dates'][i]\n",
-    "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
-    "plt.legend()\n",
-    "\n",
-    "print('finished ...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
